--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "esmigrate",
-  "version": "0.1.0",
+  "name": "elasticsearch-migration",
+  "version": "0.1.1",
   "description": "Schema migration tool for elasticsearch",
   "main": "./dist/index.js",
   "bin": {
-    "esmigrate": "dist/esmigrate.js"
+    "esmigrate": "./dist/esmigrate.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "tsc"
   },
   "keywords": [
     "elasticsearch",
